src/grammars/22goingmerry/gen/BabyCobolParser.java
// Generated from C:/Users/omer_/IdeaProjects/BabyCobolRecognizer/src/grammars/22goingmerry/BabyCobol.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BabyCobolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, IDENTIFICATION=12, DIVISION=13, PROCEDURE=14, PROGRAM=15, 
		ID=16, RUN=17, DATA=18, CALL=19, COPY=20, DISPLAY=21, SIZE=22, SPACE=23, 
		WITH=24, NO=25, ADVANCING=26, STOP=27, MOVE=28, TO=29, SUBTRACT=30, FROM=31, 
		GIVING=32, MULTIPLY=33, BY=34, PERFORM=35, TIMES=36, IF=37, THEN=38, ELSE=39, 
		END=40, ACCEPT=41, ADD=42, DIVIDE=43, DELIMITED=44, INTO=45, EVALUATE=46, 
		ALSO=47, WHEN=48, OTHER=49, TRUE=50, FALSE=51, NOT=52, OR=53, AND=54, 
		XOR=55, NEXT=56, SENTENCE=57, REMAINDER=58, LOOP=59, VARYING=60, WHILE=61, 
		REPLACING=62, UNTIL=63, OF=64, THROUGH=65, PICTURE=66, PARAGRAPH=67, IS=68, 
		LIKE=69, OCCURS=70, GO=71, SPACES=72, VALUE=73, HIGH=74, LOW=75, USING=76, 
		REFERENCE=77, CONTENT=78, SIGNAL=79, ONERROR=80, OFF=81, ALTER=82, PROCEED=83, 
		WS=84, MASK=85, INT=86, DOUBLE=87, LITERAL=88, DOT=89, IDENTIFIER=90, 
		VAR=91, DIGIT=92, STRING=93, DASH=94, COMMA=95;
	public static final int
		RULE_program = 0, RULE_identification_division = 1, RULE_identificationEntry = 2, 
		RULE_data_division = 3, RULE_line = 4, RULE_record = 5, RULE_field = 6, 
		RULE_identifiers = 7, RULE_procedure_division = 8, RULE_paragraph = 9, 
		RULE_statements = 10, RULE_using = 11, RULE_statement = 12, RULE_accept_statement = 13, 
		RULE_add_statement = 14, RULE_alter_statement = 15, RULE_call_statement = 16, 
		RULE_copy_statement = 17, RULE_display_statement = 18, RULE_divide_statement = 19, 
		RULE_go_to_statement = 20, RULE_evaluate_statement = 21, RULE_if_statement = 22, 
		RULE_loop_statement = 23, RULE_move_statement = 24, RULE_multiply_statement = 25, 
		RULE_next_sentence_statement = 26, RULE_perform_statement = 27, RULE_signal_statement = 28, 
		RULE_stop_statement = 29, RULE_subtract_statement = 30, RULE_call_types = 31, 
		RULE_display_types = 32, RULE_move_types = 33, RULE_loop_types = 34, RULE_evaluate_WhenClause = 35, 
		RULE_anyExpression = 36, RULE_atomic = 37, RULE_booleanExpression = 38, 
		RULE_booleanTerm = 39, RULE_booleanFactor = 40, RULE_booleanValue = 41, 
		RULE_comparisonExpression = 42, RULE_additiveExpression = 43, RULE_multiplicativeExpression = 44, 
		RULE_primaryExpression = 45, RULE_expression = 46, RULE_factor = 47, RULE_int = 48, 
		RULE_literal = 49, RULE_anyOperation = 50, RULE_comparisonOp = 51, RULE_arithmeticOp = 52, 
		RULE_logicalOp = 53, RULE_booleanOp = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "identification_division", "identificationEntry", "data_division", 
			"line", "record", "field", "identifiers", "procedure_division", "paragraph", 
			"statements", "using", "statement", "accept_statement", "add_statement", 
			"alter_statement", "call_statement", "copy_statement", "display_statement", 
			"divide_statement", "go_to_statement", "evaluate_statement", "if_statement", 
			"loop_statement", "move_statement", "multiply_statement", "next_sentence_statement", 
			"perform_statement", "signal_statement", "stop_statement", "subtract_statement", 
			"call_types", "display_types", "move_types", "loop_types", "evaluate_WhenClause", 
			"anyExpression", "atomic", "booleanExpression", "booleanTerm", "booleanFactor", 
			"booleanValue", "comparisonExpression", "additiveExpression", "multiplicativeExpression", 
			"primaryExpression", "expression", "factor", "int", "literal", "anyOperation", 
			"comparisonOp", "arithmeticOp", "logicalOp", "booleanOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'+'", "'=='", "'>'", "'<'", "'>='", "'<='", "'!='", 
			"'*'", "'/'", "'IDENTIFICATION'", "'DIVISION'", "'PROCEDURE'", "'PROGRAM'", 
			"'ID'", "'RUN'", "'DATA'", "'CALL'", "'COPY'", "'DISPLAY'", "'SIZE'", 
			"'SPACE'", "'WITH'", "'NO'", "'ADVANCING'", "'STOP'", "'MOVE'", "'TO'", 
			"'SUBTRACT'", "'FROM'", "'GIVING'", "'MULTIPLY'", "'BY'", "'PERFORM'", 
			"'TIMES'", "'IF'", "'THEN'", "'ELSE'", "'END'", "'ACCEPT'", "'ADD'", 
			"'DIVIDE'", "'DELIMITED'", "'INTO'", "'EVALUATE'", "'ALSO'", "'WHEN'", 
			"'OTHER'", "'TRUE'", "'FALSE'", "'NOT'", "'OR'", "'AND'", "'XOR'", "'NEXT'", 
			"'SENTENCE'", "'REMAINDER'", "'LOOP'", "'VARYING'", "'WHILE'", "'REPLACING'", 
			"'UNTIL'", "'OF'", "'THROUGH'", "'PICTURE'", "'PARAGRAPH'", "'IS'", "'LIKE'", 
			"'OCCURS'", "'GO'", "'SPACES'", "'VALUE'", "'HIGH-VALUES'", "'LOW-VALUES'", 
			"'USING'", "'REFERENCE'", "'CONTENT'", "'SIGNAL'", "'ON ERROR'", "'OFF'", 
			"'ALTER'", "'PROCEED'", null, null, null, null, null, "'.'", null, null, 
			null, null, "'-'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"IDENTIFICATION", "DIVISION", "PROCEDURE", "PROGRAM", "ID", "RUN", "DATA", 
			"CALL", "COPY", "DISPLAY", "SIZE", "SPACE", "WITH", "NO", "ADVANCING", 
			"STOP", "MOVE", "TO", "SUBTRACT", "FROM", "GIVING", "MULTIPLY", "BY", 
			"PERFORM", "TIMES", "IF", "THEN", "ELSE", "END", "ACCEPT", "ADD", "DIVIDE", 
			"DELIMITED", "INTO", "EVALUATE", "ALSO", "WHEN", "OTHER", "TRUE", "FALSE", 
			"NOT", "OR", "AND", "XOR", "NEXT", "SENTENCE", "REMAINDER", "LOOP", "VARYING", 
			"WHILE", "REPLACING", "UNTIL", "OF", "THROUGH", "PICTURE", "PARAGRAPH", 
			"IS", "LIKE", "OCCURS", "GO", "SPACES", "VALUE", "HIGH", "LOW", "USING", 
			"REFERENCE", "CONTENT", "SIGNAL", "ONERROR", "OFF", "ALTER", "PROCEED", 
			"WS", "MASK", "INT", "DOUBLE", "LITERAL", "DOT", "IDENTIFIER", "VAR", 
			"DIGIT", "STRING", "DASH", "COMMA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BabyCobol.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BabyCobolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Identification_divisionContext identification_division() {
			return getRuleContext(Identification_divisionContext.class,0);
		}
		public Procedure_divisionContext procedure_division() {
			return getRuleContext(Procedure_divisionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BabyCobolParser.EOF, 0); }
		public Data_divisionContext data_division() {
			return getRuleContext(Data_divisionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BabyCobolVisitor ) return ((BabyCobolVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			identification_division();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DATA) {
				{
				setState(111);
				data_division();
				}
			}

			setState(114);
			procedure_division();
			setState(115);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Identification_divisionContext extends ParserRuleContext {
		public TerminalNode IDENTIFICATION() { return getToken(BabyCobolParser.IDENTIFICATION, 0); }
		public TerminalNode DIVISION() { return getToken(BabyCobolParser.DIVISION, 0); }
		public TerminalNode DOT() { return getToken(BabyCobolParser.DOT, 0); }
		public List<IdentificationEntryContext> identificationEntry() {
			return getRuleContexts(IdentificationEntryContext.class);
		}
		public IdentificationEntryContext identificationEntry(int i) {
			return getRuleContext(IdentificationEntryContext.class,i);
		}
		public Identification_divisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identification_division; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).enterIdentification_division(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).exitIdentification_division(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BabyCobolVisitor ) return ((BabyCobolVisitor<? extends T>)visitor).visitIdentification_division(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identification_divisionContext identification_division() throws RecognitionException {
		Identification_divisionContext _localctx = new Identification_divisionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identification_division);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(IDENTIFICATION);
			setState(118);
			match(DIVISION);
			setState(119);
			match(DOT);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(120);
				identificationEntry();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentificationEntryContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(BabyCobolParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(BabyCobolParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(BabyCobolParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(BabyCobolParser.DOT, i);
		}
		public IdentificationEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificationEntry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).enterIdentificationEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).exitIdentificationEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BabyCobolVisitor ) return ((BabyCobolVisitor<? extends T>)visitor).visitIdentificationEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentificationEntryContext identificationEntry() throws RecognitionException {
		IdentificationEntryContext _localctx = new IdentificationEntryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identificationEntry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(126);
			match(IDENTIFIER);
			setState(127);
			match(DOT);
			setState(128);
			match(IDENTIFIER);
			setState(129);
			match(DOT);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Data_divisionContext extends ParserRuleContext {
		public LineContext line;
		public List<LineContext> lines = new ArrayList<LineContext>();
		public TerminalNode DATA() { return getToken(BabyCobolParser.DATA, 0); }
		public TerminalNode DIVISION() { return getToken(BabyCobolParser.DIVISION, 0); }
		public TerminalNode DOT() { return getToken(BabyCobolParser.DOT, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public Data_divisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_division; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).enterData_division(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).exitData_division(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BabyCobolVisitor ) return ((BabyCobolVisitor<? extends T>)visitor).visitData_division(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_divisionContext data_division() throws RecognitionException {
		Data_divisionContext _localctx = new Data_divisionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_data_division);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(DATA);
			setState(132);
			match(DIVISION);
			setState(133);
			match(DOT);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==IDENTIFIER) {
				{
				{
				setState(134);
				((Data_divisionContext)_localctx).line = line();
				((Data_divisionContext)_localctx).lines.add(((Data_divisionContext)_localctx).line);
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public RecordContext record() {
			return getRuleContext(RecordContext.class,0);
		}
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BabyCobolVisitor ) return ((BabyCobolVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_line);
		try {
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				record();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				field();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecordContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(BabyCobolParser.IDENTIFIER, 0); }
		public TerminalNode DOT() { return getToken(BabyCobolParser.DOT, 0); }
		public List<TerminalNode> INT() { return getTokens(BabyCobolParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(BabyCobolParser.INT, i);
		}
		public RecordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).enterRecord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).exitRecord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BabyCobolVisitor ) return ((BabyCobolVisitor<? extends T>)visitor).visitRecord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecordContext record() throws RecognitionException {
		RecordContext _localctx = new RecordContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_record);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT) {
				{
				{
				setState(144);
				match(INT);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			match(IDENTIFIER);
			setState(151);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(BabyCobolParser.IDENTIFIER, 0); }
		public TerminalNode DOT() { return getToken(BabyCobolParser.DOT, 0); }
		public List<TerminalNode> INT() { return getTokens(BabyCobolParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(BabyCobolParser.INT, i);
		}
		public TerminalNode OCCURS() { return getToken(BabyCobolParser.OCCURS, 0); }
		public TerminalNode TIMES() { return getToken(BabyCobolParser.TIMES, 0); }
		public TerminalNode PICTURE() { return getToken(BabyCobolParser.PICTURE, 0); }
		public TerminalNode IS() { return getToken(BabyCobolParser.IS, 0); }
		public TerminalNode MASK() { return getToken(BabyCobolParser.MASK, 0); }
		public TerminalNode LIKE() { return getToken(BabyCobolParser.LIKE, 0); }
		public IdentifiersContext identifiers() {
			return getRuleContext(IdentifiersContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabyCobolListener ) ((BabyCobolListener)listener).exitField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BabyCobolVisitor ) return ((BabyCobolVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT) {
				{
				{
				setState(153);
				match(INT);
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(IDENTIFIER);
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PICTURE:
				{
				{
				setState(160);
				match(PICTURE);
				setState(161);
				match(IS);
				setState(162);
				match(MASK);
				}
				}
				break;
			case LIKE:
				{
				{
				setState(163);
				match(LIKE);
				setState(164);
				identifiers();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OCCURS) {
				{
				setState(167);
				match(OCCURS);
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==INT) {
					{
					{
					setState(168);
					match(INT);
					}
					}
					setState(173);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(174);
				match(TIMES);
				}
			}

			setState(177);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
